--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
-.App {
-  text-align: center;
+:root {
+    /* --base: #ffc600;
+    --spacing: 10px;
+    --gray: 0;
+    --radius: 0; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+img {
+  /* border-radius: var(--radius);
+  padding: var(--spacing);
+  background: var(--base);
+  -webkit-filter: grayscale(var(--gray));
+          filter: grayscale(var(--gray)); */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
